--- a/sample_config.env
+++ b/sample_config.env
@@ -28,8 +28,8 @@ ARQ_API_URL=https://thearq.tech # Leave it like this
 
 ARQ_API_KEY=your_api_key # Get it from @ARQRobot
 
-LOG_MENTIONS=True # Make It False If You Don't Want It
-
 SPAM_CHECK_EXCEPTION_GROUPS=-16628896 # Group where spam protection will be ignored , Seperated by space
+
+LOG_MENTIONS=0 # Make It 1 if you want to enable it
 
 RSS_DELAY=300 # In seconds
