--- a/sample_config.env
+++ b/sample_config.env
@@ -33,3 +33,5 @@ SPAM_CHECK_EXCEPTION_GROUPS=-16628896 # Group where spam protection will be igno
 LOG_MENTIONS=0 # Make It 1 if you want to enable it
 
 RSS_DELAY=300 # In seconds
+
+PM_PERMIT=1 # fill 0 to disable it
